.earthly/envoy.yaml
# https://www.envoyproxy.io/docs/envoy/latest/
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0 # Envoy address
          port_value: 8080 # Envoy port
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          # https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/cors/v3/cors.proto#extensions-filters-http-cors-v3-corspolicy
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          max_age: "1728000"
                          allow_origin_string_match:
                            - prefix: "*"
                          allow_methods: "GET, PUT, PATCH, DELETE, POST, OPTIONS"
                          allow_headers: "*"
                          expose_headers: "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: echo_service
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb

                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: echo_service
      connect_timeout:
        seconds: "5"
      type: LOGICAL_DNS
      http2_protocol_options: {}
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0 # translate service address
                      port_value: 8081 # translate service port
